--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-<h1>Welcome to homepage</h1>
-<p>I'm typing this blind!</p>
+<h1>Resume for LeafiaBarrett</h1>
+<h2>Objective</h2>
+<p>To learn skills that will aid me in working on video games</p>
