additional work on resume

--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
 <h1>Resume for LeafiaBarrett</h1>
 <h2>Objective</h2>
 <p>To learn skills that will aid me in working on video games</p>
+<h2>Education</h2>
+<ul>
+    <li>Georgia Gwinnett College</li>
+    <li>
+        <ul>
+            <li>Software Development 1 & 2</li>
+            <li>Game Development</li>
+            <li>Web Development</li>
+            <li>Networking</li>
+        </ul>
+    </li>
+</ul>
