--- a/resume.html
+++ b/resume.html
@@ -15,6 +15,7 @@
                 <li>Game Development</li>
                 <li>Web Development</li>
                 <li>Networking</li>
+                <li>Programming - Intro, Intermediate, Advanced</li>
             </ul>
         </ul>
     </body>
