--- a/resume.html
+++ b/resume.html
@@ -1,22 +1,28 @@
+<!DOCTYPE html>
 <html>
     <head>
-        LeafiaBarrett's Resume
+        <title>LeafiaBarrett's Resume</title>
+        <link rel="stylesheet" type="text/css" href="css/main.css"/>
     </head>
 
     <body>
-        <h1>Resume for LeafiaBarrett</h1>
-        <h2>Objective</h2>
-        <p>To learn skills that will aid me in working on video games</p>
-        <h2>Education</h2>
-        <ul>
-            <li>Georgia Gwinnett College</li>
+        <div class="container">
+            <h1>Resume for LeafiaBarrett</h1>
+            <h2>Objective</h2>
+            <p>To learn skills that will aid me in working on video games</p>
+            <h2>Education</h2>
             <ul>
-                <li>Software Development 1 & 2</li>
-                <li>Game Development</li>
-                <li>Web Development</li>
-                <li>Networking</li>
-                <li>Programming - Intro, Intermediate, Advanced</li>
+                <li>Georgia Gwinnett College</li>
+                <ul>
+                    <li>Software Development 1 & 2</li>
+                    <li>Game Development</li>
+                    <li>Web Development</li>
+                    <li>Networking</li>
+                    <li>Programming - Intro, Intermediate, Advanced</li>
+                </ul>
             </ul>
-        </ul>
+            <br />
+            <p><a href="index.html">Index</a></p>
+        </div>
     </body>
 </html>
