--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
+<!DOCTYPE html>
 <html>
     <head>
-        LeafiaBarrett's Homepage
+        <title>LeafiaBarrett's Homepage</title>
+        <link rel="stylesheet" type="text/css" href="css/main.css"/>
     </head>
     
     <body>
-        <h1>LeafiaBarrett's Homepage</h1>
-        <p>Welcome to my homepage!</p>
-        <h1>About</h1>
-        <p>I am a senior at GGC. This is a test website.</p>
-        <h1>Resume</h1>
-        <p><a href="resume.html">My resume is here.</a></p>
-        <h1>Hobbies</h1>
-        <p>I am an avid gamer.</p>
-        <p>I also chat with friends on IRC, and watch Youtube videos a lot.</p>
+        <div class="container">
+            <h1>LeafiaBarrett's Homepage</h1>
+            <img src="https://dl.dropboxusercontent.com/u/28505565/bluh/sprites/portraits/Leafeon_face_1.png"/>
+            <p>Welcome to my homepage!</p>
+            <h1>About</h1>
+            <p>I am a senior at GGC. This is a test website.</p>
+            <h1>Links</h1>
+            <p><a href="resume.html">Resume</a></p>
+            <p><a href="hobbies.html">Hobbies</a></p>
+        </div>
     </body>
 </html>
