--- a/resume.html
+++ b/resume.html
@@ -6,23 +6,27 @@
     </head>
 
     <body>
+        <div class="nav">
+            <ul>
+                <li><a href="index.html">Index</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="hobbies.html">Hobbies</a></li>
+            </ul>
+        </div>
         <div class="container">
             <h1>Resume for LeafiaBarrett</h1>
             <h2>Objective</h2>
             <p>To learn skills that will aid me in working on video games</p>
             <h2>Education</h2>
+            <p>Georgia Gwinnett College</p>
             <ul>
-                <li>Georgia Gwinnett College</li>
-                <ul>
-                    <li>Software Development 1 & 2</li>
-                    <li>Game Development</li>
-                    <li>Web Development</li>
-                    <li>Networking</li>
-                    <li>Programming - Intro, Intermediate, Advanced</li>
-                </ul>
+                <li>Software Development 1 & 2</li>
+                <li>Game Development</li>
+                <li>Web Development</li>
+                <li>Networking</li>
+                <li>Programming - Intro, Intermediate, Advanced</li>
             </ul>
             <br />
-            <p><a href="index.html">Index</a></p>
         </div>
     </body>
 </html>
