--- a/hobbies.html
+++ b/hobbies.html
@@ -6,13 +6,19 @@
     </head>
     
     <body>
+        <div class="nav">
+            <ul>
+                <li><a href="index.html">Index</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="hobbies.html">Hobbies</a></li>
+            </ul>
+        </div>
         <div class="container">
             <h1>Hobbies</h1>
             <p>I am an avid gamer.</p>
             <p>In particular, I enjoy Mario, Smash Brothers, and Pokemon.</p>
             <p>I also chat with friends on IRC, and watch Youtube videos a lot.</p>
             <br />
-            <p><a href="index.html">Index</a></p>
         </div>
     </body>
 </html>
