--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
     </head>
     
     <body>
+        <div class="nav">
+            <ul>
+                <li><a href="index.html">Index</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="hobbies.html">Hobbies</a></li>
+            </ul>
+        </div>
         <div class="container">
             <h1>LeafiaBarrett's Homepage</h1>
             <img src="https://dl.dropboxusercontent.com/u/28505565/bluh/sprites/portraits/Leafeon_face_1.png"/>
             <p>Welcome to my homepage!</p>
             <h1>About</h1>
             <p>I am a senior at GGC. This is a test website.</p>
-            <h1>Links</h1>
-            <p><a href="resume.html">Resume</a></p>
-            <p><a href="hobbies.html">Hobbies</a></p>
         </div>
     </body>
 </html>
