--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="container">
             <h1>LeafiaBarrett's Homepage</h1>
-            <img id="kitten" src="https://dl.dropboxusercontent.com/u/28505565/bluh/sprites/portraits/Leafeon_face_1.png"/>
+            <img src="https://dl.dropboxusercontent.com/u/28505565/bluh/sprites/portraits/Leafeon_face_1.png"/>
             <p>Welcome to my homepage!</p>
             <h1>About</h1>
             <p>I am a senior at GGC. This is a test website.</p>
